remove gigante image

--- a/index.html
+++ b/index.html
@@ -1,58 +1,64 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FoodSmart - Home</title>
-  <meta name="description" content="FoodSmart, nossa gama de x-dogs para te impressionar">
-  <meta property="og:type" content="website"/>
-  <meta property="og:title" content="FoodSmart - X-Dogs"/>
-  <meta property="og:description" content="Venha Comer na FoodSmart, temos diversas variedades de x-dogs que iram te impressionar"/>
-  <meta property="og:url" content="https://foodsmart.com"/>
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <header class="container">
-    <div class="grid-4 logo-h1">
-      <a class="logo-index" href="index.html"><img src="img/ham.png" alt="logo"></a>
-      <a href="index.html">
-        <h1 class=noselect>FoodSmart</h1>
-      </a>
-    </div>
-    <div class="grid-12">
-          <nav class="header-menu">
-            <ul>
-              <li><a href="index.html" class="menu-ativo">Home</a></li>
-              <li><a href="cardapio.html">Cardápio</a></li>
-              <li><a href="localizacao.html">Localização</a></li>
-            </ul>
-          </nav>
-    </div>
-  </header>
-
-  <main>
-    <article class="container">
-      <div class="grid-9 textos">
-        <p>nunca foi tão fácil pedir sua comida</p>
-        <p>Venha Pedir Conosco <br><span>A Todo Momento</span></p>
-        <p>peça por WhatsApp, Telefone ou no estabelecimento</p>
-        <a href="localizacao.html"><button >Peça Agora</button></a>
-        <a class="call" href="cardapio.html">Cardápio</a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>FoodSmart - Home</title>
+    <meta
+      name="description"
+      content="FoodSmart, nossa gama de x-dogs para te impressionar"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="FoodSmart - X-Dogs" />
+    <meta
+      property="og:description"
+      content="Venha Comer na FoodSmart, temos diversas variedades de x-dogs que iram te impressionar"
+    />
+    <meta property="og:url" content="https://foodsmart.com" />
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header class="container">
+      <div class="grid-4 logo-h1">
+        <a class="logo-index" href="index.html"
+          ><img src="img/ham.png" alt="logo"
+        /></a>
+        <a href="index.html">
+          <h1 class="noselect">FoodSmart</h1>
+        </a>
       </div>
-      <div class="grid-6 hamburguer">
-        <img src="img/aberto-2.png" alt="Hamburguer Aberto">
+      <div class="grid-12">
+        <nav class="header-menu">
+          <ul>
+            <li><a href="index.html" class="menu-ativo">Home</a></li>
+            <li><a href="cardapio.html">Cardápio</a></li>
+            <li><a href="localizacao.html">Localização</a></li>
+          </ul>
+        </nav>
       </div>
-    </article>
-  </main>
+    </header>
 
-  <footer class="footer container">
-    <div>
-      <p>Copyright © 2021 Hambuguer Company - Todos os direitos reservados</p>
-    </div>
-  </footer>
-  
-</body>
+    <main>
+      <article class="container">
+        <div class="grid-9 textos">
+          <p>nunca foi tão fácil pedir sua comida</p>
+          <p>Venha Pedir Conosco <br /><span>A Todo Momento</span></p>
+          <p>peça por WhatsApp, Telefone ou no estabelecimento</p>
+          <a href="localizacao.html"><button>Peça Agora</button></a>
+          <a class="call" href="cardapio.html">Cardápio</a>
+        </div>
+        <div class="grid-6 hamburguer">
+          <img src="img/aberto.png" alt="Hamburguer Aberto" />
+        </div>
+      </article>
+    </main>
+
+    <footer class="footer container">
+      <div>
+        <p>Copyright © 2021 Hambuguer Company - Todos os direitos reservados</p>
+      </div>
+    </footer>
+  </body>
 </html>
-
