--- a/cardapio.html
+++ b/cardapio.html
@@ -1,177 +1,202 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FoodSmart - Cardapio</title>
-  <meta name="description" content="Cardápio da FoodSmart">
-  <meta property="og:type" content="website"/>
-  <meta property="og:title" content="FoodSmart - X-Dogs"/>
-  <meta property="og:description" content="Venha Comer na FoodSmart, temos diversas variedades de x-dogs que iram te impressionar"/>
-  <meta property="og:url" content="https://foodsmart.com"/>
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>FoodSmart - Cardapio</title>
+    <meta name="description" content="Cardápio da FoodSmart" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="FoodSmart - X-Dogs" />
+    <meta
+      property="og:description"
+      content="Venha Comer na FoodSmart, temos diversas variedades de x-dogs que iram te impressionar"
+    />
+    <meta property="og:url" content="https://foodsmart.com" />
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header class="container">
+      <div class="grid-4 logo-h1">
+        <a class="logo-index" href="index.html"
+          ><img src="img/ham.png" alt="logo"
+        /></a>
+        <a href="index.html">
+          <h1 class="noselect">FoodSmart</h1>
+        </a>
+      </div>
+      <div class="grid-12">
+        <nav class="header-menu">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="cardapio.html" class="menu-ativo">Cardápio</a></li>
+            <li><a href="localizacao.html">Localização</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
-  <header class="container">
-    <div class="grid-4 logo-h1">
-      <a class="logo-index" href="index.html"><img src="img/ham.png" alt="logo"></a>
-      <a href="index.html">
-        <h1 class=noselect>FoodSmart</h1>
-      </a>
-    </div>
-    <div class="grid-12">
-      <nav class="header-menu">
-        <ul>
-          <li><a href="index.html" >Home</a></li>
-          <li><a href="cardapio.html" class="menu-ativo">Cardápio</a></li>
-          <li><a href="localizacao.html">Localização</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+    <main class="container cardapio">
+      <h2 class="subtitulo">Hambúrgueres</h2>
 
-  <main class="container cardapio">
-    <h2 class="subtitulo">Hambúrgueres</h2>
+      <div class="separador-de-cardapio">
+        <h3>X-Burguer</h3>
+        <p class="preco">R$ 13,00</p>
+        <p class="description">Pão, maionese, hambúrguer, queijo e presunto.</p>
+      </div>
 
-    <div class="separador-de-cardapio">
-      <h3>X-Burguer</h3>
-      <p class="preco">R$ 13,00</p>
-      <p class="description">Pão, maionese, hambúrguer, queijo e presunto.</p>
-    </div>
+      <div class="separador-de-cardapio">
+        <h3>X-Salada</h3>
+        <p class="preco">R$ 15,00</p>
+        <p class="description">
+          Pão, maionese, hambúrguer, queijo e presunto, alface e tomate.
+        </p>
+      </div>
 
-    <div class="separador-de-cardapio">
-      <h3>X-Salada</h3>
-      <p class="preco">R$ 15,00</p>
-      <p class="description">Pão, maionese, hambúrguer, queijo e presunto, alface e tomate.</p>
-    </div>
+      <div class="separador-de-cardapio">
+        <h3>X-Egg</h3>
+        <p class="preco">R$ 16,00</p>
+        <p class="description">
+          Pão, maionese, hambúrguer, queijo, presunto, alface, tomate e ovo.
+        </p>
+      </div>
 
-    <div class="separador-de-cardapio">
-      <h3>X-Egg</h3>
-      <p class="preco">R$ 16,00</p>
-      <p class="description">Pão, maionese, hambúrguer, queijo, presunto, alface, tomate e ovo.</p>
-    </div>
+      <div class="separador-de-cardapio">
+        <h3>X-Calabresa</h3>
+        <p class="preco">R$ 18,00</p>
+        <p class="description">
+          Pão, maionese, hambúrguer, queijo, presunto, alface, tomate e
+          calabresa.
+        </p>
+      </div>
 
-    <div class="separador-de-cardapio">
-      <h3>X-Calabresa</h3>
-      <p class="preco">R$ 18,00</p>
-      <p class="description">Pão, maionese, hambúrguer, queijo, presunto, alface, tomate e calabresa.</p>
-    </div>
+      <div class="separador-de-cardapio">
+        <h3>X-Bacon</h3>
+        <p class="preco">R$ 21,00</p>
+        <p class="description">
+          Pão, maionese, hambúrguer, queijo, presunto, alface, tomate e bacon.
+        </p>
+      </div>
 
-    <div class="separador-de-cardapio">
-      <h3>X-Bacon</h3>
-      <p class="preco">R$ 21,00</p>
-      <p class="description">Pão, maionese, hambúrguer, queijo, presunto, alface, tomate e bacon.</p>
-    </div>
+      <div class="separador-de-cardapio">
+        <h3>X-Frango</h3>
+        <p class="preco">R$ 19,00</p>
+        <p class="description">
+          Pão, maionese, queijo, alface, tomate e filé de frango.
+        </p>
+      </div>
 
-    <div class="separador-de-cardapio">
-      <h3>X-Frango</h3>
-      <p class="preco">R$ 19,00</p>
-      <p class="description">Pão, maionese, queijo, alface, tomate e filé de frango.</p>
-    </div>
+      <div class="separador-de-cardapio">
+        <h3>X-Coração</h3>
+        <p class="preco">R$ 21,00</p>
+        <p class="description">
+          Pão, maionese, queijo, presunto, alface, tomate e coração de frango.
+        </p>
+      </div>
 
-    <div class="separador-de-cardapio">
-      <h3>X-Coração</h3>
-      <p class="preco">R$ 21,00</p>
-      <p class="description">Pão, maionese, queijo, presunto, alface, tomate e coração de frango.</p>
-    </div>
+      <div class="separador-de-cardapio">
+        <h3>X-Costela</h3>
+        <p class="preco">R$ 20,00</p>
+        <p class="description">
+          Pão, maionese, hambúrguer de costela, queijo, presunto, alface e
+          tomate.
+        </p>
+      </div>
 
-    <div class="separador-de-cardapio">
-      <h3>X-Costela</h3>
-      <p class="preco">R$ 20,00</p>
-      <p class="description">Pão, maionese, hambúrguer de costela, queijo, presunto, alface e tomate.</p>
-    </div>
+      <div class="separador-de-cardapio">
+        <h3>X-Alcatra</h3>
+        <p class="preco">R$ 23,00</p>
+        <p class="description">
+          Pão, maionese, alcatra, alface, queijo, presunto, cebola e tomate.
+        </p>
+      </div>
 
-    <div class="separador-de-cardapio">
-      <h3>X-Alcatra</h3>
-      <p class="preco">R$ 23,00</p>
-      <p class="description">Pão, maionese, alcatra, alface, queijo, presunto, cebola e tomate.</p>
-    </div>
+      <div class="separador-de-cardapio">
+        <h3>X-Picanha</h3>
+        <p class="preco">R$ 26,00</p>
+        <p class="description">
+          Pão, maionese, picanha, alface, queijo, presunto, cebola e tomate.
+        </p>
+      </div>
+      <p>Obs: Todos os pedidos acompanham 100g de batata</p>
 
-    <div class="separador-de-cardapio">
-      <h3>X-Picanha</h3>
-      <p class="preco">R$ 26,00</p>
-      <p class="description">Pão, maionese, picanha, alface, queijo, presunto, cebola e tomate.</p>
-    </div>
-    <p>Obs: Todos os pedidos acompanham 100g de batata</p>
+      <h3 class="subtitulo bebidas">Bebidas</h3>
 
-    <h3 class="subtitulo bebidas">Bebidas</h3>
+      <div class="separador-de-cardapio">
+        <h3>Água</h3>
+        <p class="preco">R$ 4,00</p>
+        <p class="description">com e sem gás</p>
+      </div>
 
-    <div class="separador-de-cardapio">
-      <h3>Água</h3>
-      <p class="preco">R$ 4,00</p>
-      <p class="description">com e sem gás</p>
-    </div>
+      <div class="separador-de-cardapio">
+        <h3>Refrigerantes</h3>
+        <p class="preco">R$ 5,50</p>
+        <p class="description">
+          Coca-cola, Coca Zero, Fanta Uva, Fanta Laranja, Sprite, Schweppes,
+          Guaraná, Pepsi e Soda.
+        </p>
+      </div>
 
-    <div class="separador-de-cardapio">
-      <h3>Refrigerantes</h3>
-      <p class="preco">R$ 5,50</p>
-      <p class="description">Coca-cola, Coca Zero, Fanta Uva, Fanta Laranja, Sprite, Schweppes, Guaraná, Pepsi e Soda.</p>
-    </div>
+      <div class="separador-de-cardapio">
+        <h3>Água Tônica</h3>
+        <p class="preco">R$ 5,50</p>
+        <p class="description">-</p>
+      </div>
 
-    <div class="separador-de-cardapio">
-      <h3>Água Tônica</h3>
-      <p class="preco">R$ 5,50</p>
-      <p class="description">-</p>
-    </div>
+      <div class="separador-de-cardapio">
+        <h3>Suco com Água</h3>
+        <p class="preco">R$ 6,00</p>
+        <p class="description">-</p>
+      </div>
 
-    <div class="separador-de-cardapio">
-      <h3>Suco com Água</h3>
-      <p class="preco">R$ 6,00</p>
-      <p class="description">-</p>
-    </div>
+      <div class="separador-de-cardapio">
+        <h3>Suco com Leite</h3>
+        <p class="preco">R$ 8,00</p>
+        <p class="description">-</p>
+      </div>
 
-    <div class="separador-de-cardapio">
-      <h3>Suco com Leite</h3>
-      <p class="preco">R$ 8,00</p>
-      <p class="description">-</p>
-    </div>
+      <div class="separador-de-cardapio">
+        <h3>Jarra de Suco com Água</h3>
+        <p class="preco">R$ 11,00</p>
+        <p class="description">750ml</p>
+      </div>
 
-    <div class="separador-de-cardapio">
-      <h3>Jarra de Suco com Água</h3>
-      <p class="preco">R$ 11,00</p>
-      <p class="description">750ml</p>
-    </div>
+      <div class="separador-de-cardapio">
+        <h3>Jarra de Suco com Leite</h3>
+        <p class="preco">R$ 13,00</p>
+        <p class="description">750ml</p>
+      </div>
 
-    <div class="separador-de-cardapio">
-      <h3>Jarra de Suco com Leite</h3>
-      <p class="preco">R$ 13,00</p>
-      <p class="description">750ml</p>
-    </div>
+      <div class="separador-de-cardapio">
+        <h3>Suco de Laranja Natural</h3>
+        <p class="preco">R$ 8,00</p>
+        <p class="description">-</p>
+      </div>
 
-    <div class="separador-de-cardapio">
-      <h3>Suco de Laranja Natural</h3>
-      <p class="preco">R$ 8,00</p>
-      <p class="description">-</p>
-    </div>
+      <div class="separador-de-cardapio">
+        <h3>Jarra de Suco de Laranja</h3>
+        <p class="preco">R$ 14,00</p>
+        <p class="description">750ml</p>
+      </div>
 
-    <div class="separador-de-cardapio">
-      <h3>Jarra de Suco de Laranja</h3>
-      <p class="preco">R$ 14,00</p>
-      <p class="description">750ml</p>
-    </div>
+      <div class="separador-de-cardapio">
+        <h3>Limonada Suiça</h3>
+        <p class="preco">R$ 7,00</p>
+        <p class="description">-</p>
+      </div>
 
-    <div class="separador-de-cardapio">
-      <h3>Limonada Suiça</h3>
-      <p class="preco">R$ 7,00</p>
-      <p class="description">-</p>
-    </div>
+      <div class="separador-de-cardapio">
+        <h3>Jarra de Limonada Suiça</h3>
+        <p class="preco">R$ 13,00</p>
+        <p class="description">750ml</p>
+      </div>
+    </main>
 
-    <div class="separador-de-cardapio">
-      <h3>Jarra de Limonada Suiça</h3>
-      <p class="preco">R$ 13,00</p>
-      <p class="description">750ml</p>
-    </div>
-
-  </main>
-
-  <footer class="footer container">
-    <div>
-      <p>Copyright © 2021 Hambuguer Company - Todos os direitos reservados</p>
-    </div>
-  </footer>
-</body>
+    <footer class="footer container">
+      <div>
+        <p>Copyright © 2021 Hambuguer Company - Todos os direitos reservados</p>
+      </div>
+    </footer>
+  </body>
 </html>
-
